WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255910
AX: Accessible name computed incorrectly for display:contents elements that rely on labels or captions ("title UI elements")
https://bugs.webkit.org/show_bug.cgi?id=255910
Summary
AX: Accessible name computed incorrectly for display:contents elements that r...
Tyler Wilcock
Reported
2023-04-25 01:09:07 PDT
...
Attachments
Patch
(6.41 KB, patch)
2023-04-25 01:12 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-25 01:09:38 PDT
<
rdar://problem/108492642
>
Tyler Wilcock
Comment 2
2023-04-25 01:12:44 PDT
Created
attachment 466070
[details]
Patch
EWS
Comment 3
2023-04-25 10:25:37 PDT
Committed
263379@main
(2670ad167491): <
https://commits.webkit.org/263379@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 466070
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug