AX: Accessible name computed incorrectly for display:contents elements that rely on labels or captions ("title UI elements") https://bugs.webkit.org/show_bug.cgi?id=255910 rdar://problem/108492642

Reviewed by Chris Fleizach.

Move non-renderer-specific behavior from AccessibilityRenderObject to
AccessibilityNodeObject.

* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
* Source/WebCore/accessibility/AccessibilityNodeObject.h:
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
* LayoutTests/accessibility/mac/figure-element-expected.txt:
* LayoutTests/accessibility/mac/figure-element.html:

Canonical link: https://commits.webkit.org/263379@main